--- a/EatSmart/app/src/main/res/values/strings.xml
+++ b/EatSmart/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">EatSmart</string>
+    <string name="app_name">eatSmart</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title">EatSmart</string>
+    <string name="title">eatSmart</string>
     <string name="username_text">Username:</string>
     <string name="password_text">Password:</string>
     <string name="button_login">Login</string>
@@ -15,6 +15,8 @@
     <string name="title_activity_sign_up">SignUPActivity</string>
     <string name="title_activity_choose_sign_up">chooseSignUP</string>
     <string name="title_activity_restaurant_signup">restaurantSignup</string>
+    <string name="action_search">SEARCH HERE</string>
+    <string name="action_spinner">Filter</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
