--- a/EatSmart/app/src/main/res/values/strings.xml
+++ b/EatSmart/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title">eatSmart</string>
-    <string name="username_text">Username:</string>
-    <string name="password_text">Password:</string>
-    <string name="button_login">Login</string>
-    <string name="button_sign_up">Sign Up</string>
+    <string name="username_text">USERNAME</string>
+    <string name="password_text">PASSWORD</string>
+    <string name="button_login">SIGN IN</string>
+    <string name="button_sign_up">SIGN UP</string>
     <string name="title_activity_home_customer">home_customer</string>
     <string name="title_activity_splash_screen">splash_screen</string>
     <string name="text_splash">SPLASH SCREEN</string>
