--- a/EatSmart/app/src/main/res/values/strings.xml
+++ b/EatSmart/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="confirm_password_text">CONFIRM PASSWORD</string>
     <string name="button_login">SIGN IN</string>
     <string name="button_sign_up">SIGN UP</string>
+    <string name="button_filter">FILTER</string>
+    <string name="button_search">SEARCH</string>
     <string name="title_activity_home_customer">home_customer</string>
     <string name="title_activity_splash_screen">splash_screen</string>
     <string name="text_splash">SPLASH SCREEN</string>
@@ -130,4 +132,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_details_restaurant">details_restaurant</string>
     <string name="bar">Bar</string>
+    <string name="title_activity_im_feeling_lucky">im_feeling_lucky</string>
+    <string name="title_activity_filter">filter</string>
+    <string name="title_activity_search">search</string>
+    <string name="title_activity_search_result">search_result</string>
 </resources>
