confirmed data transfer of categories

--- a/EatSmart/app/src/main/res/values/strings.xml
+++ b/EatSmart/app/src/main/res/values/strings.xml
@@ -23,13 +23,17 @@
     <string name="action_spinner">Filter</string>
     <string name="hint_restaurant_name">RESTAURANT NAME</string>
     <string name="hint_description">DESCRIPTION</string>
-    <string name="text_title_cuisine">CUISINE</string>
-    <string name="text_cuisine_1">CUISINE 1</string>
-    <string name="text_cuisine_2">CUISINE 2</string>
-    <string name="text_cuisine_3">CUISINE 3</string>
-    <string name="text_cuisine_4">CUISINE 4</string>
-    <string name="text_cuisine_5">CUISINE 5</string>
-    <string name="text_cuisine_6">CUISINE 6</string>
+    <string name="title_activity_filter_options">FILTER OPTIONS</string>
+    <string name="text_title_cuisine">CATEGORY</string>
+    <string name="text_cuisine_1">Cafe</string>
+    <string name="text_cuisine_2">Dessert</string>
+    <string name="text_cuisine_3">Lutong Bahay</string>
+    <string name="text_cuisine_4">Bar</string>
+    <string name="text_cuisine_5">Grill</string>
+    <string name="text_cuisine_6">Fine Dining</string>
+    <string name="text_cuisine_7">Veg</string>
+    <string name="text_cuisine_8">Buffet</string>
+    <string name="text_cuisine_9">Fast Food</string>
     <string name="text_title_budget">BUDGET</string>
     <string name="text_budget_1">BUDGET 1</string>
     <string name="text_budget_2">BUDGET 2</string>
