--- a/EatSmart/app/src/main/res/values/strings.xml
+++ b/EatSmart/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
+
 <resources>
     <string name="app_name">eatSmart</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title">eatSmart</string>
@@ -11,6 +11,9 @@
     <string name="button_sign_up">SIGN UP</string>
     <string name="button_filter">FILTER</string>
     <string name="button_search">SEARCH</string>
+    <string name="button_send">SEND</string>
+    <string name="button_view_restaurant">VIEW RESTAURANT</string>
+    <string name="button_rate_and_comment">RATE AND COMMENT</string>
     <string name="button_get_entry">GET SAMPLE ENTRY</string>
     <string name="title_activity_home_customer">home_customer</string>
     <string name="title_activity_splash_screen">splash_screen</string>
@@ -23,6 +26,7 @@
     <string name="action_spinner">Filter</string>
     <string name="hint_restaurant_name">RESTAURANT NAME</string>
     <string name="hint_description">DESCRIPTION</string>
+    <string name="hint_location">LOCATION</string>
     <string name="title_activity_filter_options">FILTER OPTIONS</string>
     <string name="text_title_cuisine">CATEGORY</string>
     <string name="text_cuisine_1">Cafe</string>
@@ -41,13 +45,14 @@
     <string name="text_budget_4">1000+</string>
     <string name="text_budget_5">BUDGET 5</string>
     <string name="text_budget_6">BUDGET 6</string>
-    <string name="hint_location">LOCATION</string>
     <string name="text_location_1">Manila</string>
     <string name="text_location_2">Pasig</string>
     <string name="text_location_3">Makati</string>
     <string name="text_location_4">San Juan</string>
     <string name="text_location_5">Pasay</string>
     <string name="text_location_6">Taguig</string>
+    <string name="text_rate">RATE</string>
+    <string name="text_comment">COMMENT</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -139,7 +144,7 @@
     </string>
     <string name="welcome_Restaurant">Welcome Restaurant</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_details_restaurant">details_restaurant</string>
     <string name="bar">Bar</string>
@@ -147,4 +152,5 @@
     <string name="title_activity_filter">filter</string>
     <string name="title_activity_search">search</string>
     <string name="title_activity_search_result">search_result</string>
+    <string name="title_activity_rate_and_comment">rate_and_comment</string>
 </resources>
